<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/image_11"
            android:layout_width="393dp"
            android:layout_height="808dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="-24dp"
            android:background="@drawable/image_11" />

        <ImageView
            android:id="@+id/logo1"
            android:layout_width="315dp"
            android:layout_height="243dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="39dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="71dp"
            android:scaleType="center"
            android:background="@drawable/logo1"
            />

        <ImageView
            android:id="@+id/line_1"
            android:layout_width="250dp"
            android:layout_height="1dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="72dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="444dp"
            android:background="@drawable/line_1"
            />

        <ImageView
            android:id="@+id/line_2"
            android:layout_width="250dp"
            android:layout_height="1dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="72dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="498dp"
            android:background="@drawable/line_1"
            />

        <ImageView
            android:id="@+id/penicon1"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="322dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="409dp"
            android:background="@drawable/penicon1"
            />

        <ImageView
            android:id="@+id/rectangle_1"
            android:layout_width="250dp"
            android:layout_height="39dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="72dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="524dp"
            android:background="@drawable/rectangle_2"
            />

        <View
            android:id="@+id/rectangle_2"
            android:layout_width="250dp"
            android:layout_height="39dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="72dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="569dp"
            android:background="@drawable/rectangle_2"
            />

        <TextView
            android:id="@+id/e_mail"
            android:layout_width="123dp"
            android:layout_height="23dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="74dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="409dp"
            android:text="@string/e_mail"
            android:fontFamily="@font/font1"
            android:textSize="32sp"
            android:textColor="#B7A8A8"
            android:gravity="top"
            />

        <TextView
            android:id="@+id/password"
            android:layout_width="123dp"
            android:layout_height="23dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="74dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="462dp"
            android:text="@string/password"
            android:fontFamily="@font/font1"
            android:textSize="32sp"
            android:textColor="#B7A8A8"
            android:gravity="top"
            />

        <TextView
            android:id="@+id/log_in"
            android:layout_width="90dp"
            android:layout_height="37dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="152dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="525dp"
            android:text="@string/log_in"
            android:fontFamily="@font/font1"
            android:textSize="32sp"
            android:textColor="#757575"
            android:gravity="top"
            />

        <ImageView
            android:id="@+id/group1"
            android:layout_width="185dp"
            android:layout_height="37dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="105dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="575dp"
            android:background="@drawable/group1"
            />

        <TextView
            android:id="@+id/register"
            android:layout_width="66dp"
            android:layout_height="20dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="100dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="630dp"
            android:text="@string/register"
            android:fontFamily="@font/font1"
            android:textSize="24sp"
            android:textColor="#757575"
            android:gravity="top"
            />

        <TextView
            android:id="@+id/find_password"
            android:layout_width="106dp"
            android:layout_height="20dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="203dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="630dp"
            android:text="@string/find_password"
            android:fontFamily="@font/font1"
            android:textSize="24sp"
            android:textColor="#757575"
            android:gravity="top"
            />

    </FrameLayout>

<!--    <ImageView-->
<!--        android:id="@+id/imageView"-->
<!--        android:layout_width="170dp"-->
<!--        android:layout_height="135dp"-->
<!--        android:layout_gravity="center"-->
<!--        android:layout_marginTop="100dp"-->
<!--        android:layout_marginBottom="80dp"-->
<!--        app:srcCompat="@drawable/logo" />-->

<!--    <EditText-->
<!--        android:id="@+id/edittext_email"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="46dp"-->
<!--        android:layout_gravity="center"-->
<!--        android:layout_marginStart="8dp"-->
<!--        android:layout_marginEnd="8dp"-->
<!--        android:ems="10"-->
<!--        android:hint="E-mail"-->
<!--        android:inputType="textEmailAddress" />-->

<!--    <EditText-->
<!--        android:id="@+id/edittext_password"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_gravity="center"-->
<!--        android:layout_marginStart="8dp"-->
<!--        android:layout_marginTop="8dp"-->
<!--        android:layout_marginEnd="8dp"-->
<!--        android:ems="10"-->
<!--        android:hint="Password"-->
<!--        android:inputType="textPassword" />-->

<!--    <Button-->
<!--        android:id="@+id/btn_login"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_gravity="center"-->
<!--        android:background="#ffffff"-->
<!--        android:text="로그인" />-->

<!--    <Button-->
<!--        android:id="@+id/btn_signup"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_gravity="center"-->
<!--        android:background="#ffffff"-->
<!--        android:text="회원가입" />-->

<!--    <Button-->
<!--        android:id="@+id/btn_google"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_gravity="center"-->
<!--        android:background="#ffffff"-->
<!--        android:text="구글로그인" />-->

<!--    <Button-->
<!--        android:id="@+id/btn_findPw"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_gravity="center"-->
<!--        android:background="#ffffff"-->
<!--        android:text="비밀번호 찾기" />-->

</LinearLayout>