<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/pixel_3a_"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:clipToOutline="true"
    android:background="@drawable/image_11">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageButton
            android:id="@+id/chevron_left"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="15dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="27dp"
            android:clipToOutline="true"
            android:background="@drawable/chevron_left" />


        <!-- Register-->
        <TextView
            android:id="@+id/register1"
            android:layout_width="65dp"
            android:layout_height="24dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="174dp"
            android:layout_marginTop="27dp"
            android:fontFamily="@font/font1"
            android:gravity="top"
            android:text="@string/register"
            android:textAppearance="@style/register1"
            android:textSize="20dp" />


        <!-- email pencil -->
        <View
            android:id="@+id/penicon1"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="324dp"
            android:layout_marginTop="137dp"
            android:background="@drawable/penicon1" />

        <!-- Password pencil-->
        <View
            android:id="@+id/penicon2"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="324dp"
            android:layout_marginTop="191dp"
            android:background="@drawable/penicon1" />


        <!-- Confirm password pencil-->
        <View
            android:id="@+id/icons8_penc"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="324dp"
            android:layout_marginTop="243dp"
            android:background="@drawable/penicon1" />



        <!-- Group 16 (E mail)-->
        <View
            android:id="@+id/group_16"
            android:layout_width="250dp"
            android:layout_height="35dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="72dp"
            android:layout_marginTop="137dp"
            android:background="#00000000" />

        <!-- E-mail -->
        <TextView
            android:id="@+id/e_mail"
            android:layout_width="123dp"
            android:layout_height="23dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="74dp"
            android:layout_marginTop="137dp"
            android:fontFamily="@font/font1"
            android:gravity="top"
            android:text="@string/e_mail"
            android:textAppearance="@style/e_mail"
            android:textSize="30dp" />

        <!-- E mail line -->
        <View
            android:id="@+id/line_em"
            android:layout_width="250dp"
            android:layout_height="1dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="72dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="172dp"
            android:background="@drawable/line_1"
            />



        <!-- Group 17 Password-->
        <View
            android:id="@+id/group_17"
            android:layout_width="250dp"
            android:layout_height="36dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="72dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="189dp"
            android:background="#00000000"
            />

        <!-- Password -->
        <TextView
            android:id="@+id/password"
            android:layout_width="123dp"
            android:layout_height="23dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="74dp"
            android:layout_marginTop="189dp"
            android:fontFamily="@font/font1"
            android:gravity="top"
            android:text="@string/password"
            android:textAppearance="@style/password"
            android:textSize="30dp" />

        <!-- Password line -->
        <View
            android:id="@+id/line_ps"
            android:layout_width="250dp"
            android:layout_height="1dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="72dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="225dp"
            android:background="@drawable/line_1"
            />



        <!-- Group 18 Confirm Password-->
        <View
            android:id="@+id/group_18"
            android:layout_width="250dp"
            android:layout_height="36dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="74dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="242dp"
            android:background="#00000000"
            />

        <!-- Confirm Password -->
        <TextView
            android:id="@+id/confirm_pas"
            android:layout_width="192dp"
            android:layout_height="23dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="76dp"
            android:layout_marginTop="242dp"
            android:fontFamily="@font/font1"
            android:gravity="top"
            android:text="@string/confirm_pas"
            android:textAppearance="@style/confirm_pas"
            android:textSize="30dp" />

        <View
            android:id="@+id/rectangle_2"
            android:layout_width="250dp"
            android:layout_height="39dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="72dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="341dp"
            android:background="@drawable/rectangle_2"
            />

        <!-- Confirm Password line -->
        <View
            android:id="@+id/line_cp"
            android:layout_width="250dp"
            android:layout_height="1dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="74dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="278dp"
            android:background="@drawable/line_1"
            />


        <!-- Register -->
        <TextView
            android:id="@+id/register2"
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="154dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="346dp"
            android:text="@string/register"
            android:textAppearance="@style/register2"
            android:gravity="top"
            android:textSize="30dp"
            android:fontFamily="@font/font1"
            />


    </FrameLayout>





</LinearLayout>
























