<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pixel_3a_"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToOutline="true"
    tools:context=".question_corDel"
    android:background="@drawable/image_11">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Dayary -->
        <TextView
            android:id="@+id/dayary"
            android:layout_width="108dp"
            android:layout_height="39dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="144dp"
            android:layout_marginTop="9dp"
            android:fontFamily="@font/font1"
            android:gravity="top"
            android:text="@string/dayary"
            android:textAppearance="@style/dayary"
            android:textColor="#62A60C"
            android:textSize="48dp" />

        <!-- Q. What’s your favorite music today? -->
        <TextView
            android:id="@+id/q_what_s_yo"
            android:layout_width="340dp"
            android:layout_height="29dp"
            android:autoSizeTextType="uniform"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="28dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="69dp"
            android:text="@string/question"
            android:fontFamily="@font/font1"
            android:gravity="top"
            android:textColor="#000000"
            android:textSize="28sp"
            />

        <!-- Rectangle 19 -->
        <ImageView
            android:id="@+id/rectangle_1"
            android:layout_width="372dp"
            android:layout_height="256dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="9dp"
            android:layout_marginTop="107dp"
            android:adjustViewBounds= "true"
            android:scaleType="fitXY"
            android:background="@drawable/rectangle_1"
            />

        <!-- icons8-pen-99 1 -->
        <ImageView
            android:id="@+id/icons8_pen_"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="19dp"
            android:layout_marginTop="320dp"
            android:background="@drawable/icon_pen_2" />

        <!-- icons8-eraser-99 1 -->
        <ImageView
            android:id="@+id/icons8_eras"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="62dp"
            android:layout_marginTop="320dp"
            android:background="@drawable/icons_eraser_1" />

        <!-- Rectangle 20 -->
        <ImageView
            android:id="@+id/rectangle_2"
            android:layout_width="372dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="9dp"
            android:layout_marginTop="369dp"
            android:background="@drawable/rectangle_2" />

        <!-- icons8-upload-to-cloud-100 1 -->
        <ImageView
            android:id="@+id/icons8_uplo"
            android:layout_width="42.53dp"
            android:layout_height="42.54dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="103dp"
            android:layout_marginTop="373dp"
            android:background="@drawable/icons_cloud_1" />

        <!-- Upload Picture -->
        <TextView
            android:id="@+id/upload_pict"
            android:layout_width="126.77dp"
            android:layout_height="22dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="159.23dp"
            android:layout_marginTop="383dp"
            android:fontFamily="@font/font1"
            android:gravity="top"
            android:text="@string/upload"
            android:textColor="#000000"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/today_i_am_"
            android:layout_width="376dp"
            android:layout_height="166dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="9dp"
            android:layout_marginTop="419dp"
            android:background="@null"
            android:fontFamily="@font/font1"
            android:gravity="top"
            android:hint="@string/todayimhappy"
            android:lineSpacingExtra="4dp"
            android:textColor="#000000"
            android:textColorHint="#B7A8A8"
            android:textSize="30sp"
            android:maxLength="200"
            />

        <!-- Line 6 -->
        <ImageView
            android:id="@+id/line_6"
            android:layout_width="372dp"
            android:layout_height="1dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="9dp"
            android:layout_marginTop="448dp"
            android:background="@drawable/line_1" />

        <!-- Line 7 -->
        <ImageView
            android:id="@+id/line_7"
            android:layout_width="372dp"
            android:layout_height="1dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="9dp"
            android:layout_marginTop="482dp"
            android:background="@drawable/line_1" />

        <!-- Line 8 -->
        <ImageView
            android:id="@+id/line_8"
            android:layout_width="372dp"
            android:layout_height="1dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="9dp"
            android:layout_marginTop="516dp"
            android:background="@drawable/line_1" />

        <!-- Line 9 -->
        <ImageView
            android:id="@+id/line_9"
            android:layout_width="372dp"
            android:layout_height="1dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="9dp"
            android:layout_marginTop="550dp"
            android:background="@drawable/line_1" />

        <!-- Line 10 -->
        <View
            android:id="@+id/line_10"
            android:layout_width="372dp"
            android:layout_height="1dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="9dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="584dp"
            android:background="@drawable/line_1"
            />

        <!-- 0/200 -->
        <TextView
            android:id="@+id/some_id"
            android:layout_width="52dp"
            android:layout_height="21dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="333dp"
            android:layout_marginTop="585dp"
            android:fontFamily="@font/font1"
            android:gravity="center"
            android:text="0/200"
            android:textColor="#000000" />

        <!-- Rectangle 21 -->
        <ImageView
            android:id="@+id/rectangle_3"
            android:layout_width="197dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="607dp"
            android:background="@drawable/rectangle_2" />

        <!-- Rectangle 21 -->
        <ImageView
            android:id="@+id/rectangle_4"
            android:layout_width="197dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="197dp"
            android:layout_marginTop="607dp"
            android:background="@drawable/rectangle_2" />

        <!-- icons8-edit-file-100 1 -->
        <ImageView
            android:id="@+id/icons8_edit"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="43dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="609dp"
            android:background="@drawable/icon_edit_1"
            />

        <!-- icons8-delete-100 1 -->
        <View
            android:id="@+id/icons8_dele"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="239dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="609dp"
            android:background="@drawable/icon_delete_1"
            />

        <!-- Modify -->
        <TextView
            android:id="@+id/modify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="92dp"
            android:layout_marginTop="615dp"
            android:fontFamily="@font/font1"
            android:gravity="top"
            android:text="@string/modify"
            android:textColor="#000000"
            android:textSize="24sp" />

        <!-- Delete -->
        <TextView
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="288dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="615dp"
            android:text="@string/delete"
            android:fontFamily="@font/font1"
            android:gravity="top"
            android:textSize="24sp"
            android:textColor="#000000"
            />


        <!-- Line1 -->
        <View
            android:id="@+id/bottom_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="646dp"
            android:layout_marginEnd="1dp"
            android:layout_marginRight="4dp"
            android:background="@drawable/line_1" />

        <View
            android:id="@+id/icons8_home"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="660dp"
            android:background="@drawable/icon_home"
            android:clickable="true"
            android:focusable="true"
            />

        <!-- Writing button -->
        <View
            android:id="@+id/icons8_penc"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="97dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="660dp"
            android:background="@drawable/penicon1"
            android:clickable="true"
            android:focusable="true"
            />

        <!-- Diary button -->
        <View
            android:id="@+id/icons8_jour"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="174dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="660dp"
            android:background="@drawable/icon_diary"
            android:clickable="true"
            android:focusable="true"
            />

        <!-- Calendar button -->
        <View
            android:id="@+id/icons8_cale"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="251dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="660dp"
            android:background="@drawable/icon_calendar"
            android:clickable="true"
            android:focusable="true"
            />

        <!-- Map button -->
        <View
            android:id="@+id/icons8_loca"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="328dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="660dp"
            android:background="@drawable/icon_map"
            android:clickable="true"
            android:focusable="true"
            />

    </FrameLayout>
</LinearLayout>